--- a/css/partners-styles.css
+++ b/css/partners-styles.css
@@ -9,6 +9,10 @@
 .partners {
   margin: 0 auto;
   padding: 16px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   border-image: url("../img/partners/frame.svg");
   border-image-slice: 50 33 50 33;
@@ -16,6 +20,7 @@
 }
 
 .partners__platinum {
+  width: 100%;
   border: 2px solid #ffffff;
   padding: 16px 48px 0;
   border-bottom: none;
@@ -48,10 +53,8 @@
   margin: 64px auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-}
-.partners__gold > a {
-  margin: 0 8px;
+  justify-content: space-between;
+  gap: 32px;
 }
 
 .partners__silver {
@@ -88,39 +91,61 @@
 }
 
 .partners__barter {
-  margin-top: 64px;
-  border: 2px solid #ffffff;
-  padding: 0 48px 16px;
-  border-top: none;
+  margin-top: 16px;
 
   display: grid;
   align-items: center;
   justify-items: center;
 
-  background-image: linear-gradient(to top, #13026b 0%, transparent 100%);
-
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 32px;
-  grid-row-gap: 16px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .partners__barter > a:nth-child(1) {
-  grid-area: 1 / 1 / 2 / 3;
+  grid-area: 2 / 1 / 3 / 3;
 }
 .partners__barter > a:nth-child(2) {
-  grid-area: 1 / 3 / 2 / 5;
+  grid-area: 1 / 2 / 2 / 4;
 }
 .partners__barter > a:nth-child(3) {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 1 / 5 / 2 / 7;
 }
 .partners__barter > a:nth-child(4) {
-  grid-area: 2 / 3 / 3 / 4;
+  grid-area: 2 / 6 / 3 / 8;
+}
+.partners__barter > a:nth-child(5) {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.partners__barter > a:nth-child(6) {
+  grid-area: 3 / 4 / 4 / 5;
+}
+.partners__barter > a:nth-child(7) {
+  grid-area: 3 / 6 / 4 / 7;
 }
 
 .partners img {
   width: 100%;
   height: 100%;
+}
+
+.partners__rest {
+  position: relative;
+  top: -16px;
+  width: 100%;
+
+  border: 2px solid #ffffff;
+  padding: 96px 48px 16px;
+  border-top: none;
+
+  display: flex;
+  justify-content: center;
+
+  background-image: linear-gradient(to top, #13026b 0%, transparent 100%);
+
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 32px;
+  grid-row-gap: 16px;
 }
 
 @media (max-width: 1200px) {
@@ -149,6 +174,9 @@
     grid-column-gap: 24px;
     grid-row-gap: 12px;
   }
+  .partners__gold {
+    gap: 16px;
+  }
 
   .partners__platinum > a:nth-child(1) {
     grid-area: 1 / 1 / 1 / 1;
@@ -165,25 +193,13 @@
 
   .partners__barter {
     margin-top: 32px;
-    padding: 0 24px 16px;
+    padding: 0 8px 16px;
     border-top: none;
 
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 24px;
-    grid-row-gap: 16px;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
   }
-
-  .partners__barter > a:nth-child(1) {
-    grid-area: 1 / 1 / 2 / 3;
-  }
-  .partners__barter > a:nth-child(2) {
-    grid-area: 1 / 3 / 2 / 5;
-  }
-  .partners__barter > a:nth-child(3) {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-  .partners__barter > a:nth-child(4) {
-    grid-area: 2 / 3 / 3 / 4;
+  .partners__rest {
+    padding-top: 32px;
   }
 }
